added wait.gif for more user friendly page

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -810,6 +810,12 @@ p.help {
 	height: 130px;
 	width: 300px;
 }
+.saving {
+    text-align: center;
+    display: none;
+    margin:auto;
+}
+
 
 /* END MISC */
 
