--- a/templates/history/search_form_budgets.html
+++ b/templates/history/search_form_budgets.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="bar_content">
-  <form action="{% url history_budgets %}" method="GET">{% csrf_token %}
+  <form action="{% url history_budgets %}" method="GET" class="show_wait">{% csrf_token %}
     <strong>
       Chercher les lignes budgétaires qui correspondent à
       {{ filter_form.connector }} conditions suivantes:
@@ -51,3 +51,7 @@
 </div>
 <div class="cleaner"></div>
 <br />
+
+<div class="saving">
+	<img src="{{ MEDIA_URL }}img/layout/wait.gif" />
+</div>
