--- a/templates/pagination.html
+++ b/templates/pagination.html
@@ -2,8 +2,6 @@
 {% load i18n %}
 <p class="paginator">
 {% if pagination_required %}
-{% for i in page_range %}
-    {% paginator_number request page i %}
-{% endfor %}
+{% for i in page_range %}{% paginator_number request page i %}{% endfor %}
 {% endif %}
 </p>
