--- a/templates/order/_search_form.html
+++ b/templates/order/_search_form.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="bar_content">
-	<form action="{% url tab_orders %}" method="GET">
+	<form action="{% url tab_orders %}" method="GET" class="show_wait">
 		<strong>
 			Chercher les commandes qui correspondent à
 			{{ filter_form.connector }} conditions suivantes:
@@ -37,3 +37,7 @@
 </div>
 <div class="cleaner"></div>
 <br />
+
+<div class="saving">
+	<img src="{{ MEDIA_URL }}img/layout/wait.gif" />
+</div>
