--- a/templates/provider/index.html
+++ b/templates/provider/index.html
@@ -9,6 +9,10 @@
 {% endblock %}
 
 {% block content %}
+<div class="saving">
+	<img src="{{ MEDIA_URL }}img/layout/wait.gif" />
+</div>
+
 {% if provider_list %}
 <table class="list">
 	<thead>
@@ -25,11 +29,11 @@
 					{% if provider.reseller %}
 						{{ provider.name }} ({{ provider.product_set.all.count }} produits)
 						- Revendeur: 
-						<a href="{% url product_index %}?provider={{provider.reseller.id}}&connector=OR" class="table_go">
+						<a href="{% url product_index %}?provider={{provider.reseller.id}}&connector=OR" class="table_go show_wait">
 							{{ provider.reseller.name }}
 						</a>
 					{% else %}
-						<a href="{% url product_index %}?provider={{provider.id}}&connector=OR" class="table_go">
+						<a href="{% url product_index %}?provider={{provider.id}}&connector=OR" class="table_go show_wait">
 							{{ provider.name }}
 						</a>({{ provider.product_set.all.count }} produits)
 					{% endif %}
