fixed legend on order page

--- a/templates/order/index.html
+++ b/templates/order/index.html
@@ -19,12 +19,12 @@
 <div class="hide_on_save">
 	{% if orders.object_list %}
 		<div style="color:#e2350d">
-			<div class="legend_urgent">commandes urgentes</div>
+			<div class="legend_urgent"></div>commandes urgentes
 		</div>
 		<div class="cleaner"></div>
 
 		<div style="color:#f9a900">
-			<div class="legend_problem">problème sur la commande</div>
+			<div class="legend_problem"></div>problème sur la commande
 		</div>
 		<div class="cleaner"></div>
 	
