--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -36,7 +36,7 @@
 	{% endif %}
 	<div class="btn_wrapper hide_on_save">
 		<a href="{% url product_export_xls %}?{{url_args}}" class="btn_big">
-			<img src="{{ MEDIA_URL }}img/icons/page_excel.png" />Exporter cette liste en xls
+			<img src="{{ MEDIA_URL }}img/icons/page_excel.png" />Exporter cette liste
 		</a>
 	</div>
 	
