export orders history to xls

--- a/templates/history/orders.html
+++ b/templates/history/orders.html
@@ -20,7 +20,7 @@
 	{% if display == "by_order" %}
 		<p style="font-size:16px">Montant commandes cumulé: {{ total }}€</p>
 	{% else %}{% if display == "by_product" %}
-		<p style="font-size:16px">Prix total cumulé: {{ total }}€</p>
+		<p style="font-size:16px">Montant total cumulé: {{ total }}€</p>
 	{% endif %}{% endif %}
 	
 	{% pagination objects %}
