added orderitems name to order page filter form

--- a/templates/order/_search_form.html
+++ b/templates/order/_search_form.html
@@ -24,6 +24,9 @@
 				<td>Fournisseur:</td>
 				<td>{{ filter_form.provider }}</td>
 				<td width="10%"></td>
+				<td>Désignation:</td>
+				<td>{{ filter_form.items__name__icontains }}</td>
+				<td width="10%"></td>
 				<td>N°cmde:</td>
 				<td>{{ filter_form.number }}</td>
 				<td width="10%"></td>
