added amount spent on budget list

--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -11,7 +11,7 @@
 <form method="GET" action="." class="search show_wait">
 	<fieldset>
 		<input type="text" name="q" value="{{q_init}}"/> <input type="submit" value=" " />
-		<p style="margin-left:10px">&rarr;&nbsp;{{search_count}} produit{{search_count|pluralize}} trouv&eacute{{search_count|pluralize}}</p>
+		<p style="margin-left:10px">&rarr;&nbsp;{{search_count}} produit{{search_count|pluralize}} trouvé{{search_count|pluralize}}</p>
 	</fieldset>
 </form>
 <div class="cleaner"></div>
