--- a/templates/budget/index.html
+++ b/templates/budget/index.html
@@ -23,6 +23,7 @@
 				<th>Nom</th>
 				<th>Tutelle</th>
 				<th>Nature</th>
+				<th>Montant dépensé</th>
 				<th>Montant disponible</th>
 				<th>Action</th>
 			</thead>
@@ -33,6 +34,7 @@
 					<td>{{ budget.name }}</td>
 					<td>{{ budget.get_budget_type_display }}</td>
 					<td>{{ budget.default_nature|default:"Toutes" }}</td>
+					<td>{{ budget.get_amount_spent }}</td>
 					<td>{{ budget.get_amount_left }}</td>
 					<td>
 						<a href="{% url budgetlines %}?budget_id={{budget.id}}&connector=OR" class="zoomin">Voir détail</a>
