export orders history to xls

--- a/templates/history/orders.html
+++ b/templates/history/orders.html
@@ -16,6 +16,11 @@
 		Liste des commandes réceptionnées - 
 		Page {{ objects.number }} sur {{ objects.paginator.num_pages }}.
 	</h2>
+	<div class="btn_wrapper">
+		<a href="{% url history_orders_export %}?{{search_args}}" class="btn_big">
+			<img src="{{ MEDIA_URL }}img/icons/page_excel.png" />Exporter vers Excel
+		</a>
+	</div>
 	
 	{% if display == "by_order" %}
 		<p style="font-size:16px">Montant commandes cumulé: {{ total }}€</p>
