expiry changes if product price is updated

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -23,7 +23,7 @@
 
 <div id="wrapper">
 	<div id="login">
-		<div id="header"><h1>Gestion des commandes LBCMCP</h1></div>
+		<div id="header"><h1>BCG-Lab</h1></div>
 		<div id="in_login">
 			<div id="login_subhead">Identification</div>
 			<form method="post" action="{% url django.contrib.auth.views.login %}" name="login">{% csrf_token %}
