--- a/templates/member/form.html
+++ b/templates/member/form.html
@@ -18,7 +18,7 @@
 <body>
 <div id="wrapper">
 	<div id="login">
-		<div id="header"><h1>Gestion des commandes LBCMCP</h1></div>
+		<div id="header"><h1>BCG-Lab</h1></div>
 		<div id="in_login">
 			<div id="login_subhead">Création d'un nouveau compte</div>
 			<form action="{% url new_member %}" method="POST" accept-charset="utf-8">{% csrf_token %}
