--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -24,7 +24,7 @@
 
 <div id="wrapper">
 	<div id="login">
-		<div id="header"><h1>Gestion des commandes LBCMCP</h1></div>
+		<div id="header"><h1>BCG-Lab</h1></div>
 		<div id="in_login">
 			<div id="login_subhead">Création d'un nouveau compte</div>
 			<form method="POST" action="{% url new_user %}" class="large_labels">{% csrf_token %}
