--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="MSSmartTagsPreventParsing" content="TRUE" />
-<title>Commandes LBCMCP - {% block title %}{% endblock %}</title>
+<title>BCG-Lab - {% block title %}{% endblock %}</title>
 <link type="image/gif" rel="icon" href="{{ MEDIA_URL }}img/icons/favicon.gif" />
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/humanity/jquery-ui-1.8.16.custom.css" type="text/css" />
 <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}css/style.css" />
@@ -34,7 +34,7 @@
       </div>
       <div class="cleaner"></div>
       
-      <h1><a href="{% url home %}">Gestion des commandes LBCMCP</a></h1>
+      <h1><a href="{% url home %}">BCG-Lab</a></h1>
       <div class="cleaner"></div>
       
       <!-- start: navigation -->
